--- a/app/src/main/res/layout/card_categories.xml
+++ b/app/src/main/res/layout/card_categories.xml
@@ -4,25 +4,29 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_categories_view"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="140dp"
     android:layout_margin="5dp"
-    card_view:cardCornerRadius="10dp">
+    card_view:cardCornerRadius="5dp"
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/categorise_bg">
         <ImageView android:id="@+id/categories_image"
             android:layout_height="0dp"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
+            android:layout_gravity="center"
             android:layout_weight="1.0"
+            android:layout_marginTop="5dp"
             android:scaleType="centerCrop"/>
         <TextView
             android:id="@+id/categories_text"
             android:layout_marginLeft="5dp"
             android:layout_marginBottom="5dp"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="#000000"
             android:textStyle="bold"
-            android:textSize="26sp"
+            android:textSize="16sp"
             android:textAlignment="center"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"/>
